@@ -16,7 +16,6 @@ t/boiler.t
 t/changes.t
 t/CHI-driver-tests.t
 t/comment-spelling.t
-t/coverage.t
 t/critic.t
 t/cv.t
 t/dist.t
@@ -30,6 +29,7 @@ t/metrics.t
 t/no404s.t
 t/noplan.t
 t/pod-cm.t
+t/pod-coverage.t
 t/pod-snippets.t
 t/pod-spelling.t
 t/pod-synopsis.t
