@@ -3,19 +3,8 @@
 use strict;
 use warnings;
 
+use Test::DescribeMe qw(author);
 use Test::Most;
+use Test::Needs 'Test::Distribution';
 
-BEGIN {
-	if($ENV{'AUTHOR_TESTING'}) {
-		eval {
-			require Test::Distribution;
-		};
-		if($@) {
-			plan(skip_all => 'Test::Distribution not installed');
-		} else {
-			Test::Distribution->import();
-		}
-	} else {
-		plan(skip_all => 'Author tests not required for installation');
-	}
-}
+Test::Distribution->import();
