@@ -3,16 +3,13 @@
 use strict;
 use warnings;
 
+use Test::DescribeMe qw(author);
 use Test::Most;
 
-if($ENV{'AUTHOR_TESTING'}) {
-	eval 'use Test::NoPlan qw / all_plans_ok /';
+eval 'use Test::NoPlan qw / all_plans_ok /';
 
-	if($@) {
-		plan(skip_all => 'Test::NoPlan required for test verification');
-	} else {
-		all_plans_ok();
-	}
+if($@) {
+	plan(skip_all => 'Test::NoPlan required for test verification');
 } else {
-	plan(skip_all => 'Author tests not required for installation');
+	all_plans_ok();
 }
